tdf#125054 fixed WhichIDs for cloned Items

Cause of error is that former operator= for SfxPoolItem
copies all but the WhichID from the source, so being quite
(and dangerously) dfferent from Clone() method.
There were quite some places (and will be) that use that
from my POV 'hidden' functionality by creating an Item
with the target-WhichID and then using operator= to assign
data from an Item with different WhichID

Also took the opportunity to adapt AutoFormatHelper to use
std::unique_ptr and the correct operator= shared from derived
classes

Change-Id: I40f295cecc84b6b904ef672cc35d606695192d43