sw/inc/tblafmt.hxx
@@ -64,8 +64,8 @@ class SwTable;
 class SwBoxAutoFormat : public AutoFormatBase
 {
     // Writer specific
-    std::shared_ptr<SvxFrameDirectionItem>  m_aTextOrientation;
-    std::shared_ptr<SwFormatVertOrient>     m_aVerticalAlignment;
+    std::unique_ptr<SvxFrameDirectionItem>  m_aTextOrientation;
+    std::unique_ptr<SwFormatVertOrient>     m_aVerticalAlignment;
 
     // number format
     OUString                                m_sNumFormatString;
@@ -78,8 +78,7 @@ public:
     SwBoxAutoFormat();
     SwBoxAutoFormat( const SwBoxAutoFormat& rNew );
     ~SwBoxAutoFormat();
-
-    SwBoxAutoFormat& operator=(const SwBoxAutoFormat& rNew);
+    SwBoxAutoFormat& operator=(const SwBoxAutoFormat& rRef);
 
     /// Comparing based of boxes backgrounds.
     bool operator==(const SwBoxAutoFormat& rRight);
